<!--
  ~ Copyright (c) 2020 Chamich Apps. All rights reserved.
  -->

<resources>

    <string name="goals_label_fragment_goals">Goals</string>
    <string name="goals_label_fragment_add_goal">Add Goal</string>

    <!-- General -->
    <string name="goals_text_cancel">Cancel</string>

    <!-- Add Goals Dialog Fragment -->
    <string name="goals_add_goals_hint_goal_title">What\'s your goal?</string>
    <string name="goals_add_goals_text_label_measured_in">Measured in</string>
    <string name="goals_add_goals_text_label_total_effort">Total effort</string>
    <string name="goals_add_goals_text_label_progress_so_far">Progress so far</string>
    <string name="goals_add_goals_text_label_complete_by">Complete by</string>
    <string name="goals_add_goals_text_label_category">Category</string>
    <string name="goals_add_goals_text_label_color">Color</string>
    <string name="goals_add_goals_button_add_goal">Add Goal</string>
    <string name="goals_add_goals_button_cancel">@string/goals_text_cancel</string>

    <!-- Measured In Bottom Sheet Dialog Fragment -->
    <string name="goals_measured_in_text_title_measured_in">How to measure your goals?</string>
    <string name="goals_measured_in_button_cancel">@string/goals_text_cancel</string>
    <string name="goals_measured_in_button_use">Use</string>

    <!-- Measurement -->
    <string name="goals_measured_in_steps">Steps</string>
    <string name="goals_measured_in_hours">Hours</string>
    <string name="goals_measured_in_items">Items</string>
    <string name="goals_measured_in_percent">%</string>
    <string name="goals_measured_in_dollars">$</string>
    <string name="goals_measured_in_euros">€</string>
    <string name="goals_measured_in_times">Times</string>
    <string name="goals_measured_in_weeks">Weeks</string>
    <string name="goals_measured_in_days">Days</string>
    <string name="goals_measured_in_libs">Libs</string>
    <string name="goals_measured_in_kg">Kg</string>
    <string name="goals_measured_in_miles">Miles</string>
    <string name="goals_measured_in_km">Km</string>
    <string name="goals_measured_in_books">Books</string>
    <string name="goals_measured_in_chapters">Chapters</string>
    <string name="goals_measured_in_pages">Pages</string>
    <string name="goals_measured_in_words">Words</string>
    <string name="goals_measured_in_courses">Courses</string>
    <string name="goals_measured_in_sessions">Sessions</string>
    <string name="goals_measured_in_classes">Classes</string>
    <string name="goals_measured_in_videos">Videos</string>

</resources>